force-app/main/default/objects/SPEN_AssetDetails__c/SPEN_AssetDetails__c.object-meta.xml
<CustomObject>
    <description>Object created to track Asset information against a Transmission Case</description>
    <label>Asset Details</label>
    <nameField>
        <displayFormat>AD-{0000000}</displayFormat>
        <label>Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>