force-app/main/default/objects/SPEN_AssetDetails__c/fields/SPEN_AssetOperatorCompany__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssetOperatorCompany__c</fullName>
    <label>Asset Operator Company</label>
    <length>40</length>
    <type>Text</type>
</CustomField>