force-app/main/default/objects/SPEN_AssetDetails__c/fields/SPEN_AssetOperatorEmailaddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssetOperatorEmailaddress__c</fullName>
    <label>Asset Operator Email address</label>
    <type>Email</type>
</CustomField>