force-app/main/default/objects/SPEN_AssetDetails__c/fields/SPEN_AssetOperatorName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssetOperatorName__c</fullName>
    <label>Asset Operator Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>