force-app/main/default/objects/SPEN_AssetDetails__c/fields/SPEN_AssetOperatorPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssetOperatorPhoneNumber__c</fullName>
    <label>Asset Operator Phone Number</label>
    <type>Phone</type>
</CustomField>