force-app/main/default/objects/SPEN_AssetDetails__c/fields/SPEN_AssetOwnerCompany__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssetOwnerCompany__c</fullName>
    <label>Asset Owner Company</label>
    <length>40</length>
    <type>Text</type>
</CustomField>