force-app/main/default/objects/SPEN_AssetDetails__c/fields/SPEN_AssetOwnerEmailaddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssetOwnerEmailaddress__c</fullName>
    <label>Asset Owner Email address</label>
    <type>Email</type>
</CustomField>