force-app/main/default/objects/SPEN_AssetDetails__c/fields/SPEN_AssetOwnerName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssetOwnerName__c</fullName>
    <label>Asset Owner Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>