force-app/main/default/objects/SPEN_AssetDetails__c/fields/SPEN_AssetOwnerPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssetOwnerPhoneNumber__c</fullName>
    <label>Asset Owner Phone Number</label>
    <type>Phone</type>
</CustomField>