force-app/main/default/objects/SPEN_AssetDetails__c/fields/SPEN_RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Asset Details</relationshipLabel>
    <relationshipName>Asset_Details</relationshipName>
    <type>Lookup</type>
</CustomField>